src/dolphincontextmenu.cpp
@@ -445,8 +445,8 @@ void DolphinContextMenu::addAdditionalActions(const KFileItemListProperties &pro
     addSeparator();
 
     QList<QAction *> additionalActions;
-    if (props.isDirectory() && props.isLocal() && ContextMenuSettings::showOpenTerminal()) {
-        additionalActions << m_mainWindow->actionCollection()->action(QStringLiteral("open_terminal"));
+    if (props.isLocal() && ContextMenuSettings::showOpenTerminal()) {
+        additionalActions << m_mainWindow->actionCollection()->action(QStringLiteral("open_terminal_here"));
     }
     m_fileItemActions->addActionsTo(this, KFileItemActions::MenuActionSource::All, additionalActions);
 
