src/settings/contextmenu/contextmenusettingspage.cpp
@@ -127,7 +127,7 @@ bool ContextMenuSettingsPage::entryVisible(const QString& id)
         return ContextMenuSettings::showCopyLocation();
     } else if (id == "duplicate") {
         return ContextMenuSettings::showDuplicateHere();
-    } else if (id == "open_terminal") {
+    } else if (id == "open_terminal_here") {
         return ContextMenuSettings::showOpenTerminal();
     }
     return false;
@@ -149,7 +149,7 @@ void ContextMenuSettingsPage::setEntryVisible(const QString& id, bool visible)
         ContextMenuSettings::setShowCopyLocation(visible);
     } else if (id == "duplicate") {
         ContextMenuSettings::setShowDuplicateHere(visible);
-    } else if (id == "open_terminal") {
+    } else if (id == "open_terminal_here") {
         ContextMenuSettings::setShowOpenTerminal(visible);
     }
 }
