src/settings/dolphinsettingsdialog.cpp
@@ -86,7 +86,7 @@ DolphinSettingsDialog::DolphinSettingsDialog(const QUrl& url, QWidget* parent, K
         QStringLiteral("open_in_new_window"),
         QStringLiteral("copy_location"),
         QStringLiteral("duplicate"),
-        QStringLiteral("open_terminal"),
+        QStringLiteral("open_terminal_here")
     });
     KPageWidgetItem* contextMenuSettingsFrame = addPage(contextMenuSettingsPage,
                                                         i18nc("@title:group", "Context Menu"));
